# signal

./: .gitattributes  .gitignore  README.md  ROADMAP.md  pyproject.toml  run
.github/workflows/: daily.yml
docs/: index.html
src/signalfeed/: cli.py  digest.py  display.py  email_send.py  generate.py  render_html.py
src/signalfeed/scrapers/: __init__.py  arxiv.py  hackernews.py  huggingface.py  labs.py  reddit.py  utils.py
worker/: index.js  wrangler.toml
